retouch ui terbaru (html,css & js)

--- a/app/views/default.html
+++ b/app/views/default.html
@@ -53,6 +53,13 @@
                             </button>
                             <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                                 <ul id="nav" class="navbar-nav ms-auto">
+                                    <li class="nav-item d-md-none d-767-none">
+                                        <div class="button d-flex justify-content-between my-2 flex-row-reverse">
+                                            <a href="/auth/signup" class="signup fw-bold">Daftar</a>
+                                            <a href="/auth/signin" class="signin fw-bold m-0">Masuk</a>
+                                        </div>
+                                    </li>
+                                    <li class="d-md-none d-767-none"><hr class="dropdown-divider"></li>
                                     <li class="nav-item">
                                         <a class="active" href="/">Beranda</a>
                                     </li>
@@ -66,10 +73,19 @@
                                             <li class="nav-item"><a href="#kontak">Kontak</a></li>
                                         </ul>
                                     </li>
-                                    <!-- <li class="nav-item">
-                                        <a href="/home/layanan" aria-label="Toggle navigation">Layanan</a>
-                                    </li>
                                     <li class="nav-item">
+                                        <a class="dd-menu collapsed" href="javascript:void(0)" data-bs-toggle="collapse"
+                                            data-bs-target="#submenu-1-2" aria-controls="navbarSupportedContent"
+                                            aria-expanded="false" aria-label="Toggle navigation">Layanan</a>
+                                        <ul class="sub-menu collapse" id="submenu-1-2">
+                                            <li class="nav-item"><a href="/bantuan/berdaya">Pojok Berdaya</a></li>
+                                            <li class="nav-item"><a href="/bantuan/peduli-berbagi">Pojok Peduli Berbagi</a></li>
+                                            <li class="nav-item"><a href="/bantuan/wakaf">Pojok Wakaf</a></li>
+                                            <li class="nav-item"><a href="/bantuan/peduli-yatim">Pojok Peduli Yatim</a></li>
+                                            <li class="nav-item"><a href="/bantuan/rescue">Pojok Rescue</a></li>
+                                        </ul>
+                                    </li>
+                                    <!-- <li class="nav-item">
                                         <a href="blog.pojokberbagi.id" aria-label="Toggle navigation">Blog</a>
                                     </li> -->
                                 </ul>
