--- a/app/views/default/home/index.html
+++ b/app/views/default/home/index.html
@@ -59,7 +59,7 @@
                             </div>
                         </div>
                         <div class="col-12 order-2">
-                            <div class="row gap-3 mx-0 flex-wrap custom-for-col-md-6" data-start-delay-wow="<?php $time += $delay; echo $time; ?>">
+                            <div class="row mx-0 flex-wrap custom-height-setter custom-gap" data-start-delay-wow="<?php $time += $delay; echo $time; ?>">
                                 <div data-wow-delay="<?= $time.'s'; ?>" class="align-items-center wow fadeInUp col box bg-light p-3 d-flex rounded-box order-1 shadow-sm">
                                     <div class="box-icon bg-primary">
                                         <i class="lni lni-wallet"></i>
@@ -87,7 +87,7 @@
                                         <p><small class="text-muted">Target</small></p>
                                     </div>
                                 </div>
-                                <div data-wow-delay="<?php $time += $delay; echo $time.'s'; ?>" class="align-items-center wow fadeInUp col-md-6 col-lg box bg-light p-3 d-grid rounded-box progress-box order-0 order-md-1 shadow-sm">
+                                <div data-wow-delay="<?php $time += $delay; echo $time.'s'; ?>" class="align-items-center wow fadeInUp col-6 col-md-12 col-lg box bg-light p-3 d-grid rounded-box progress-box order-0 order-md-1 shadow-sm">
                                     <div class="box-icon bg-green">
                                         <i class="lni lni-grow"></i>
                                     </div>
@@ -101,7 +101,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div data-wow-delay="<?php $time += $delay; echo $time.'s'; ?>" class="align-items-center wow fadeInUp col-md-6 col-lg box bg-light p-3 d-grid rounded-box timeup order-0 order-md-1 shadow-sm">
+                                <div data-wow-delay="<?php $time += $delay; echo $time.'s'; ?>" class="align-items-center wow fadeInUp col-6 col-md box bg-light p-3 d-grid rounded-box timeup order-0 order-md-0 order-lg-1 shadow-sm">
                                     <div class="box-icon bg-warning">
                                         <i class="lni lni-timer"></i>
                                     </div>
