--- a/app/views/default/bantuan/detil.html
+++ b/app/views/default/bantuan/detil.html
@@ -8,7 +8,7 @@
                 </div>
             </div>
         </div>
-        <div class="row gap-3 mx-0 flex-wrap custom-for-col-md-6 mt-4 toggle" data-start-delay-wow="0.4" id="info-box-area">
+        <div class="row mx-0 flex-wrap custom-gap custom-height-setter mt-3 mt-lg-4 pb-2 toggle" data-start-delay-wow="0.4" id="info-box-area">
             <div data-wow-delay=".4s" class="align-items-center wow fadeInUp col box bg-light p-3 d-flex rounded-box order-1 shadow-none">
                 <div class="box-icon bg-primary">
                     <i class="lni lni-wallet"></i>
@@ -36,7 +36,7 @@
                     <p><small class="text-muted">Target</small></p>
                 </div>
             </div>
-            <div data-wow-delay="1s" class="align-items-center wow fadeInUp col-md-6 col-lg box bg-light p-3 d-grid rounded-box progress-box order-0 order-md-1 shadow-none">
+            <div data-wow-delay="1s" class="align-items-center wow fadeInUp col-6 col-md-12 col-lg box bg-light p-3 d-grid rounded-box progress-box order-0 order-md-1 shadow-none">
                 <div class="box-icon bg-green">
                     <i class="lni lni-grow"></i>
                 </div>
@@ -48,12 +48,12 @@
                     </div>
                 </div>
             </div>
-            <div data-wow-delay="1s" class="align-items-center wow fadeInUp col-md-6 col-lg box bg-light p-3 d-grid rounded-box timeup order-0 order-md-1 shadow-none">
+            <div data-wow-delay="1s" class="align-items-center wow fadeInUp col-6 col-md col-lg box bg-light p-3 d-grid rounded-box timeup order-0 order-md-0 order-lg-1 shadow-none">
                 <div class="box-icon bg-warning">
                     <i class="lni lni-timer"></i>
                 </div>
                 <div class="box-info d-flex flex-column">
-                    <h6 class="mb-0" <?= ((strtolower($data['detil_bantuan']->sisa_waktu) != 'unlimited') ? 'data-count-up-value="' . $data['detil_bantuan']->sisa_waktu .'" data-count-up-date="true">' : '>' . $data['detil_bantuan']->sisa_waktu); ?>Tanpa Batas</h6>
+                    <h6 class="mb-0" <?= ((strtolower($data['detil_bantuan']->sisa_waktu) != 'unlimited') ? 'data-count-up-value="' . $data['detil_bantuan']->sisa_waktu .'" data-count-up-date="true">' : '>' . $data['detil_bantuan']->sisa_waktu); ?></h6>
                     <p><small class="text-muted">Sisa Waktu</small></p>
                     <div class="d-flex justify-content-between text-primary align-items-center d-md-none collapseButton mt-1 toggle">
                         <span>Sembunyikan detil</span>
@@ -62,14 +62,12 @@
                 </div>
             </div>
         </div>
-        <div class="row g-0 gap-3 gap-md-4 bg-white position-relative pt-4" id="commit-bantuan-area" data-start-delay-wow="1.2">
-            <div class="col justify-content-center d-flex wow fadeInUp bg-light rounded-box align-items-center py-4" data-wow-delay="1.2s">
-                <div class="text-center">
-                    <div class="logo border-1 rounded-box bg-white overflow-hidden border border-light shadow-none">
-                        <img src="<?= $data['detil_bantuan']->path_gambar_logo_pengaju_bantuan; ?>" alt="Logo <?= $data['detil_bantuan']->pengaju_bantuan; ?>">
-                    </div>
-                    <h6 class="mt-3 text-black fw-bold"><?= $data['detil_bantuan']->pengaju_bantuan; ?></h6>
+        <div class="row g-0 gap-3 gap-md-4 bg-white position-relative pt-2 pt-lg-3" id="commit-bantuan-area" data-start-delay-wow="1.2">
+            <div class="col justify-content-center d-flex flex-column wow fadeInUp bg-light rounded-box align-items-center py-4" data-wow-delay="1.2s">
+                <div class="logo d-flex align-items-center justify-content-center border-1 rounded-box bg-white overflow-hidden border border-light shadow-none text-center">
+                    <img class="img-fluid" src="<?= $data['detil_bantuan']->path_gambar_logo_pengaju_bantuan; ?>" alt="Logo <?= $data['detil_bantuan']->pengaju_bantuan; ?>">
                 </div>
+                <h6 class="mt-3 text-black fw-bold text-center"><?= $data['detil_bantuan']->pengaju_bantuan; ?></h6>
             </div>
             <div class="col order-first order-md-last wow fadeInUp" data-wow-delay="1.4s">
                 <div class="row">
@@ -78,7 +76,7 @@
                     </div>
                     <div class="col-12">
                         <h5 class="mb-3 mt-5"><?= $data['detil_bantuan']->nama; ?></h5>
-                        <p class="fs-6 lh-lg"><?= $data['detil_bantuan']->deskripsi; ?></p>
+                        <p class="lh-lg"><?= $data['detil_bantuan']->deskripsi; ?></p>
                     </div>
                 </div>
             </div>
