menambah version file js dan css untuk di load ?=v1 (pojok-berbagi-style.css, pojok-berbagi-script.js, default, home, detil, services)

--- a/app/views/default.html
+++ b/app/views/default.html
@@ -18,7 +18,7 @@
     <!-- <link rel="stylesheet" href="/assets/route/default/core/css/tiny-slider.css"> -->
     <!-- <link rel="stylesheet" href="/assets/route/default/core/css/glightbox.min.css"> -->
     <link rel="stylesheet" href="/assets/route/default/core/css/main.css">
-    <link rel="stylesheet" href="/assets/route/default/core/css/default.css">
+    <link rel="stylesheet" href="/assets/route/default/core/css/default.css?=v1">
     <?= $this->getLinkRel('controller'); ?>
     <?= $this->getLinkRel('action'); ?>
 </head>
@@ -222,7 +222,7 @@
     <!-- <script src="/assets/route/default/core/js/count-up.min.js"></script> -->
     <script src="/assets/route/default/core/js/main.js"></script>
     <!-- Core Script -->
-    <script src="/assets/route/default/core/js/default.js"></script>
+    <script src="/assets/route/default/core/js/default.js?=v1"></script>
     <script src="/assets/route/auth/js/auth.js"></script>
     <?= $this->getScript('controller'); ?>
     <?= $this->getScript('action'); ?>
