--- a/app/views/default.html
+++ b/app/views/default.html
@@ -199,20 +199,8 @@
         </div>
       </div>
     <?php } ?>
-    <!-- Internal Script -->
-    <script>
-        const imgOnErrorList = document.querySelectorAll('img[alt]');
-        imgOnErrorList.forEach(errorImg => {
-            errorImg.addEventListener('error', function(e) {
-                let altValue = '(Gambar Rusak) '+this.getAttribute('alt'),
-                    alt = document.createTextNode(altValue);
-                if (alt.length > 0) {
-                    this.parentNode.insertBefore(alt,this);
-                    this.parentNode.removeChild(this);
-                }
-            });
-        });
-    </script>
+    <!-- Broken Img Handler -->
+    <script src="/assets/main/js/unload-img-handling.js"></script>
     <!-- Vendor Script -->
     <script src="/vendors/jquery/dist/jquery.min.js"></script>
     <script src="/assets/route/default/core/js/bootstrap.min.js"></script>
