--- a/app/views/default/home/index.html
+++ b/app/views/default/home/index.html
@@ -108,10 +108,10 @@
                                     <div class="box-info d-flex flex-column">
                                         <h6 class="mb-0"<?= (!is_null($banner->sisa_waktu) ? ' data-count-up-value="' . $banner->sisa_waktu . '" data-count-up-date="true">' : '>Unlimited') ?></h6>
                                         <p><small class="text-muted">Sisa Waktu</small></p>
-                                        <div class="d-flex justify-content-between text-primary align-items-center d-md-none collapseButton mt-1">
+                                        <a role="button" class="d-flex justify-content-between text-primary align-items-center d-md-none collapseButton mt-1">
                                             <span>Lebih detil</span>
                                             <i class="lni lni-chevron-down"></i>
-                                        </div>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
